# Job_lens-Mobile-App-

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/data/: users.json
backend/migrations/: jobs_table_migration.sql
backend/ml_service/: README.md  app.py  config.py  requirements.txt  test_service.py  train_model.py
backend/src/: main.rs  models.rs  state.rs
backend/src/routes/: auth.rs  health.rs  jobs.rs  mod.rs  resume.rs  users.rs
backend/src/utils/: jwt.rs  matching.rs  mod.rs  text.rs
dataset/: JobLens.ipynb  RealWorldJobLensAI.ipynb
frontend/: .env.example  App.tsx  app.config.js  babel.config.js  metro.config.js  nativewind-env.d.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: forgot-password.tsx  home.tsx  index.tsx  job-details.tsx  jobs.tsx  login.tsx  notifications.tsx  onboarding.tsx  profile.tsx  register.tsx  resume-match.tsx
frontend/src/components/: ErrorBoundary.tsx  FilterChip.tsx  JobCard.tsx  NavBar.tsx  NotificationItem.tsx  QuickActionCard.tsx  Tag.tsx
frontend/src/components/ui/: Button.tsx  FileUpload.tsx  Input.tsx
frontend/src/config/: firebase.ts
frontend/src/screens/: ForgotPasswordScreen.tsx  HomeScreen.tsx  JobDetailsScreen.tsx  JobListScreen.tsx  LoginScreen.tsx  NotificationsScreen.tsx  OnboardingScreen.tsx  ProfileScreen.tsx  RegisterScreen.tsx  ResumeMatchScreen.tsx
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: errorDebug.ts  logoService.ts  pdf.ts  pdf.web.ts  secureStorage.ts
(+3 files in other folders)
